noinst_LIBRARIES = libcontrollers.a

INCLUDES = -I$(top_srcdir)/src/elements -I$(srcdir) -I$(top_srcdir)/src/network \
  -I$(top_srcdir)/src/map

libcontrollers_a_SOURCES = GameController.cpp \
  GameInfo.cpp Controller.cpp \
  PlayerController.cpp TrackController.cpp StationController.cpp \
  CityController.cpp
