## $Id$

noinst_LIBRARIES = libelements.a

INCLUDES = -I$(srcdir) -I$(srcdir)/../controllers -I$(srcdir)/../network

libelements_a_SOURCES = Serializable.cpp \
    GameElement.cpp \
    Player.cpp \
    Station.cpp \
    StationAddon.cpp \
    Train.cpp \
    TrainInfo.cpp \
    Wagon.cpp \
    Track.cpp
