SUBDIRS = $(WRAPPER)

INCLUDES = -I$(top_srcdir)/src/map -I$(top_srcdir)/src/elements -I$(top_srcdir)/src/controllers -I$(top_srcdir)/src/network -I$(top_srcdir)/src/game

noinst_LIBRARIES = libwrapperbase.a

libwrapperbase_a_SOURCES = BaseApplication.cpp \
    BaseDialog.cpp \
    BaseMainWindow.cpp \
    BaseWidget.cpp
